# piper_dance

./: README.md
ROS1/piper_description/meshes/: Master_1.rar
ROS1/piper_description/rviz/: piper.rviz
ROS1/piper_description/urdf/: double_piper.urdf  double_piper.xacro  eight_piper.xacro  four_piper.urdf  piper_description_with_camera_front_left.xacro  piper_description_with_camera_front_right.xacro  piper_description_with_camera_left.xacro  piper_description_with_camera_right.xacro
ROS1/piper_joint_pub/: CMakeLists.txt  package.xml
ROS1/piper_joint_pub/config/: piper_1.yaml  piper_3.yaml
ROS1/piper_joint_pub/launch/: start_mulit_piper.launch
ROS1/piper_joint_pub/scripts/: hand_cmd.py
ROS1/piper_joint_pub/src/: piper_joint_pub.cpp  piper_joint_single_pub.cpp  piper_multi_joint.cpp
ROS2/dual_piper_v2/: CMakeLists.txt  package.xml
ROS2/dual_piper_v2/launch/: display_eighten_piper.launch.py  display_left_hand.launch.py  display_piper.launch.py  display_piper_mamo.launch.py  display_right_hand.launch.py
ROS2/dual_piper_v2/meshes/: base_link.STL  base_link_back.STL  camera_link.STL  (+4 more)
ROS2/piper_joint_pub/: CMakeLists.txt  package.xml
ROS2/piper_joint_pub/config/: action.yaml  approach.yaml  dance_pose_v1.yaml  dance_pose_v2.yaml  flower_action.yaml  joint.yaml  joint_.yaml  joint_back.yaml  joint_separate.yaml  joint_sequence.yaml  joint_trajectory.yaml
ROS2/piper_joint_pub/config/back/: 三头聚拢.yaml  点头.yaml
ROS2/piper_joint_pub/config/mamo/: mamo_pose.yaml  piper_1.yaml  piper_2.yaml  piper_3.yaml  piper_5.yaml  piper_6.yaml
ROS2/piper_joint_pub/config/piper/dance_pose_v1/: piper_17.yaml
ROS2/piper_joint_pub/config/piper/dance_pose_v1_back/: piper_1.yaml  piper_10.yaml  piper_18.yaml  piper_8.yaml
ROS2/piper_joint_pub/config/piper/flower_action/: piper_1.yaml  piper_10.yaml  piper_11.yaml  piper_12.yaml  piper_13.yaml  piper_14.yaml  piper_15.yaml  piper_16.yaml  piper_18.yaml  piper_2.yaml  piper_4.yaml  piper_5.yaml  piper_6.yaml  piper_7.yaml  piper_8.yaml  piper_9.yaml
ROS2/piper_joint_pub/launch/: start_mulit_joint.launch.py
ROS2/piper_joint_pub/src/: output_yaml.py  piper_joint_pub.cpp  piper_joint_pub_eighteen.cpp  piper_joint_pub_eighteen_back.cpp  piper_joint_pub_tenth.cpp  piper_joint_yaml.cpp  piper_multi_joint.cpp  test.py  trajectory.yaml  trajectory2.yaml
(+32 files in other folders)
